@startuml

title __UTIL's Class Diagram__\n

  namespace jovic.dragan.pj2.util {
    enum Direction {
      DOWN
      LEFT
      RIGHT
      UP
      INTEGER_SIDE_MAP
      OPPOSITES_MAP
    }
  }
  

  namespace jovic.dragan.pj2.util {
    class jovic.dragan.pj2.util.Pair {
        + Pair()
        + getFirst()
        + getSecond()
    }
  }
  

  namespace jovic.dragan.pj2.util {
    class jovic.dragan.pj2.util.Util {
        {static} - random : Random
        {static} + createFolderIfNotExists()
        {static} + minIdx()
        + pathResolver()
        {static} + randomBetween()
    }
  }
  

  namespace jovic.dragan.pj2.util {
    class jovic.dragan.pj2.util.Vector2D {
        - x : int
        - y : int
        + Vector2D()
        + Vector2D()
        + equals()
        + getX()
        + getY()
        + setX()
        + setY()
        + toString()
    }
  }
  

  namespace jovic.dragan.pj2.util {
    class jovic.dragan.pj2.util.Vector3D {
        - x : int
        - y : int
        - z : int
        + Vector3D()
        + Vector3D()
        + add()
        + getX()
        + getY()
        + getZ()
        + setX()
        + setY()
        + setZ()
    }
  }
  

  namespace jovic.dragan.pj2.util {
    class jovic.dragan.pj2.util.Watcher {
        # availableKinds : Kind[]
        # handlers : Map<Kind, Consumer<WatchEvent>>
        # service : WatchService
        # watchingPath : Path
        + Watcher()
        + addEventHandler()
        + run()
    }
  }
  

  jovic.dragan.pj2.util.Pair o-- T1 : first
  jovic.dragan.pj2.util.Pair o-- T2 : second
  jovic.dragan.pj2.util.Vector2D .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
